--- a/app/src/main/res/layout/fragment_current_weather.xml
+++ b/app/src/main/res/layout/fragment_current_weather.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/purple"
+    android:background="@color/transparent"
     tools:context=".fragment.currentweather.CurrentWeatherFragment">
     <LinearLayout
         android:layout_width="match_parent"
@@ -80,32 +80,21 @@
                 android:background="@drawable/background_translucent"
                 />
         </LinearLayout>
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardViewForecast"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_10sdp"
-            android:layout_marginRight="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_130sdp"
-            android:background="@android:color/transparent"
-            app:cardElevation="4dp"
-            app:cardCornerRadius="@dimen/_10sdp"
-            app:cardBackgroundColor="#10000000"
-            app:cardPreventCornerOverlap="false"
 
-            >
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_160sdp"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_10sdp"
                 android:background="@drawable/background_translucent"
                 >
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:background="@drawable/background_translucent"
+
                     android:padding="@dimen/_10sdp">
 
                     <ImageView
@@ -141,6 +130,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_110sdp"
                     android:id="@+id/rvForecast"
+                    android:layout_margin="@dimen/_10sdp"
 
                     />
 
@@ -149,26 +139,28 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="5-day forecast"
-                    android:background="@drawable/background_translucent"/>
+                    android:layout_marginStart="@dimen/_9sdp"
+                    android:layout_marginEnd="@dimen/_9sdp"
+                    android:layout_marginBottom="@dimen/_13sdp"
+                    android:background="@drawable/background_transparent_white"/>
             </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_100sdp"
-            android:layout_margin="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_20sdp"
-            app:cardCornerRadius="@dimen/_10sdp"
-            app:cardBackgroundColor="#10000000"
-            app:cardPreventCornerOverlap="false"
-            >
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_translucent"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginTop="">
+
             <com.github.mikephil.charting.charts.LineChart
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_100sdp"
                 android:id="@+id/lineChart"
                 android:layout_margin="@dimen/_10sdp"
                 />
-        </androidx.cardview.widget.CardView>
+        </LinearLayout>
     </LinearLayout>
 
 </ScrollView>
