--- a/app/src/main/res/layout/fragment_current_weather.xml
+++ b/app/src/main/res/layout/fragment_current_weather.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/transparent"
+    android:fadeScrollbars="false"
     tools:context=".fragment.currentweather.CurrentWeatherFragment">
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,7 +28,7 @@
                     android:layout_height="wrap_content"
                     android:text="30"
                     android:id="@+id/tvTemp"
-                    android:textSize="@dimen/_90sdp"
+                    android:textSize="@dimen/_80sdp"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     />
@@ -45,7 +46,8 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/linearTemp"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
                 android:id="@+id/weatherConditionandMinMaxTemp">
                 <TextView
                     android:layout_width="wrap_content"
@@ -152,7 +154,7 @@
             android:background="@drawable/background_translucent"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
-            android:layout_marginTop="">
+            android:layout_marginTop="@dimen/_10sdp">
 
             <com.github.mikephil.charting.charts.LineChart
                 android:layout_width="match_parent"
