--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/night_background"
     android:orientation="vertical"
-    tools:context=".MainActivity"
+    tools:context=".ui.MainActivity"
     android:fitsSystemWindows="true">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -27,7 +27,7 @@
                 android:padding="8dp"
                 android:src="@drawable/ic_add"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:onClick="onLeftButtonClick"
+
                 android:contentDescription="@string/add" />
 
             <!-- Title TextView -->
@@ -49,7 +49,6 @@
                 android:layout_centerVertical="true"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="@string/add"
-                android:onClick="onRightMenuButtonClick"
                 android:padding="8dp"
                 android:src="@drawable/ic_menu" />
 
