--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.WeatherApp" parent="Theme.Material3.Light.NoActionBar">
-        <item name="android:windowFullscreen">true</item>
+<!--        <item name="android:windowFullscreen">true</item>-->
         <!-- Customize your light theme here. -->
+        <item name="android:scrollbars">none</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
