--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,4 +29,18 @@
     <color name="colorError">#B00020</color>
     <color name="colorOnPrimary">#FFFFFF</color>
     <color name="orange">#FFBF00</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="whiteblue">#c6d7e7</color>
+    <color name="bottom_nav_unselected">#8894a0</color>
+    <color name="bottom_nav_selected">#606d76</color>
+    <color name="lightgray">#dbe3ee</color>
+    <color name="recycler_view_corner_color">#eff4f8</color>
+    <color name="star">#5783A6</color>
+    <color name="item_info_background">#d1ecc3</color>
+    <color name="price">#50C513</color>
+    <color name="item_title_header">#e1f0d3</color>
+    <color name="text">#7f8e71</color>
+    <color name="app_background">#FF018786</color>
+    <color name="hold_color">#80ffffff</color>
 </resources>
