24h forecast + nested recyclerviews in scrollview and viewpager

--- a/app/src/main/res/layout/item_24h_forecast.xml
+++ b/app/src/main/res/layout/item_24h_forecast.xml
@@ -2,22 +2,43 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginStart="@dimen/_5sdp"
+    android:layout_marginEnd="@dimen/_5sdp"
     android:orientation="vertical">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="12"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_20sdp"
+        android:id="@+id/temperature_24h"/>
     <ImageView
         android:id="@+id/iv_icon_weather_24h"
-        android:layout_width="@dimen/_20sdp"
-        android:layout_height="@dimen/_20sdp"
+        android:layout_width="@dimen/_24sdp"
+        android:layout_height="@dimen/_24sdp"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/_10sdp"
         android:src="@drawable/ic_cloud" />
     <TextView
+        android:id="@+id/tv_wind_24h"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_gravity="center"
+        android:text="5.0m/s"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_8sdp" />
+    <TextView
         android:id="@+id/tv_time_24h"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_5sdp"
         android:layout_gravity="center"
         android:text="12:00"
         android:textColor="@color/white"
         android:textSize="@dimen/_10sdp" />
+
+
 
 </LinearLayout>
