--- a/app/src/main/res/layout/fragment_current_weather_other_place.xml
+++ b/app/src/main/res/layout/fragment_current_weather_other_place.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/transparent"
     android:id="@+id/scrollView"
-    tools:context=".ui.fragment.currentweather.CurrentWeatherFragment">
+    tools:context=".ui.fragment.currentotherplace.CurrentWeatherOtherPlaceFragment">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,14 +21,14 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/linearTemp"
+                android:id="@+id/linearTemp1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvTemp"
+                    android:id="@+id/tvTemp1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="30"
@@ -36,7 +37,7 @@
                     android:textSize="@dimen/_80sdp" />
 
                 <TextView
-                    android:id="@+id/tvUnitDegree"
+                    android:id="@+id/tvUnitDegree1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
@@ -47,14 +48,14 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/weatherConditionandMinMaxTemp"
+                android:id="@+id/weatherConditionandMinMaxTemp1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/weatherCondition"
+                    android:id="@+id/weatherCondition1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -69,7 +70,7 @@
                     android:layout_below="@id/tvTemp"
                     android:layout_gravity="center"
                     android:layout_marginStart="@dimen/_10sdp"
-                    android:layout_toRightOf="@+id/weatherCondition"
+                    android:layout_toRightOf="@+id/weatherCondition1"
                     android:text="30°/23°"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_14sdp" />
@@ -86,68 +87,68 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="@dimen/_140sdp"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginRight="@dimen/_10sdp"
+            android:background="@drawable/background_translucent"
+            >
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="@dimen/_140sdp"
-                android:layout_marginLeft="@dimen/_10sdp"
-                android:layout_marginRight="@dimen/_10sdp"
-                android:background="@drawable/background_translucent"
-                >
-                <RelativeLayout
-                    android:layout_width="match_parent"
+                android:orientation="horizontal"
+
+                android:padding="@dimen/_10sdp">
+
+                <ImageView
+                    android:layout_width="@dimen/_16sdp"
+                    android:layout_height="@dimen/_16sdp"
+                    android:layout_gravity="center"
+                    android:id="@+id/ivCalendar1"
+                    android:background="@drawable/background_circle_white"
+                    android:src="@drawable/ic_calendar" />
+
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-
-                    android:padding="@dimen/_10sdp">
-
-                    <ImageView
-                        android:layout_width="@dimen/_16sdp"
-                        android:layout_height="@dimen/_16sdp"
-                        android:layout_gravity="center"
-                        android:id="@+id/ivCalendar"
-                        android:background="@drawable/background_circle_white"
-                        android:src="@drawable/ic_calendar" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_toRightOf="@+id/ivCalendar"
-                        android:layout_marginLeft="@dimen/_10sdp"
-                        android:text="5-day forecast"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_12sdp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginLeft="@dimen/_10sdp"
-                        android:text="More details"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_10sdp"
-
-                        />
-                </RelativeLayout>
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_110sdp"
-                    android:id="@+id/rvForecast"
-                    android:layout_margin="@dimen/_10sdp"
-                    android:nestedScrollingEnabled="false"
-                    />
-
-                <Button
-                    android:id="@+id/btn_5_day_forecast"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_toRightOf="@+id/ivCalendar1"
+                    android:layout_marginLeft="@dimen/_10sdp"
                     android:text="5-day forecast"
-                    android:layout_marginStart="@dimen/_9sdp"
-                    android:layout_marginEnd="@dimen/_9sdp"
-                    android:layout_marginBottom="@dimen/_13sdp"
-                    android:background="@drawable/background_transparent_white"/>
-            </LinearLayout>
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12sdp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:text="More details"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_10sdp"
+
+                    />
+            </RelativeLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_110sdp"
+                android:id="@+id/rvForecast1"
+                android:layout_margin="@dimen/_10sdp"
+
+                />
+
+            <Button
+                android:id="@+id/btn_5_day_forecast1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="5-day forecast"
+                android:layout_marginStart="@dimen/_9sdp"
+                android:layout_marginEnd="@dimen/_9sdp"
+                android:layout_marginBottom="@dimen/_13sdp"
+                android:background="@drawable/background_transparent_white"/>
+        </LinearLayout>
 
 
         <LinearLayout
@@ -183,12 +184,12 @@
                     />
 
             </LinearLayout>
-            <androidx.recyclerview.widget.RecyclerView
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/lineChart1"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_100sdp"
-                android:id="@+id/rv24hForecast"
-                android:nestedScrollingEnabled="false"
-                />
+                android:layout_height="109dp"
+                android:layout_margin="@dimen/_10sdp" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -251,11 +252,11 @@
                         android:text="Humidity:"
 
                         android:textColor="@color/white"
-                         />
+                        />
 
                     <!-- Chỉ số Humidity -->
                     <TextView
-                        android:id="@+id/textHumidity"
+                        android:id="@+id/textHumidity1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -289,7 +290,7 @@
 
                     <!-- Chỉ số Real feel -->
                     <TextView
-                        android:id="@+id/textRealFeel"
+                        android:id="@+id/textRealFeel1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -321,11 +322,11 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/white"
                         android:text="UV:"
-                         />
+                        />
 
                     <!-- Chỉ số UV -->
                     <TextView
-                        android:id="@+id/textUV"
+                        android:id="@+id/textUV1"
                         android:textColor="@color/white"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -357,11 +358,11 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/white"
                         android:text="Pressure:"
-                         />
+                        />
 
                     <!-- Chỉ số Pressure -->
                     <TextView
-                        android:id="@+id/textPressure"
+                        android:id="@+id/textPressure1"
                         android:textColor="@color/white"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -393,11 +394,11 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/white"
                         android:text="Chance of rain:"
-                         />
+                        />
 
                     <!-- Chỉ số Chance of rain -->
                     <TextView
-                        android:id="@+id/textChanceOfRain"
+                        android:id="@+id/textChanceOfRain1"
                         android:layout_width="0dp"
                         android:text="20%"
                         android:textColor="@color/white"
@@ -420,4 +421,4 @@
 
     </LinearLayout>
 
-</androidx.core.widget.NestedScrollView>
+</ScrollView>
