--- a/app/src/main/res/layout/fragment_current_weather.xml
+++ b/app/src/main/res/layout/fragment_current_weather.xml
@@ -188,7 +188,7 @@
                 android:layout_height="@dimen/_100sdp"
                 android:id="@+id/rv24hForecast"
                 android:nestedScrollingEnabled="false"
-                />
+                android:focusableInTouchMode="true"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
