--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,9 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/transparent">
+        android:background="@color/transparent"
+        app:menu="@menu/main_menu"
+        android:theme="@style/AppTheme.ToolbarMenu">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -40,17 +42,17 @@
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/_20sdp" />
 
-            <!-- Right Menu Button -->
-            <ImageButton
-                android:id="@+id/rightMenuButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:contentDescription="@string/add"
-                android:padding="8dp"
-                android:src="@drawable/ic_menu" />
+<!--            &lt;!&ndash; Right Menu Button &ndash;&gt;-->
+<!--            <ImageButton-->
+<!--                android:id="@+id/rightMenuButton"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_alignParentEnd="true"-->
+<!--                android:layout_centerVertical="true"-->
+<!--                android:background="?attr/selectableItemBackgroundBorderless"-->
+<!--                android:contentDescription="@string/add"-->
+<!--                android:padding="8dp"-->
+<!--                android:src="@drawable/ic_menu" />-->
 
         </RelativeLayout>
 
