--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,8 +4,12 @@
 <!--        <item name="android:windowFullscreen">true</item>-->
         <!-- Customize your light theme here. -->
         <item name="android:scrollbars">none</item>
+
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
     <style name="Theme.WeatherApp" parent="Base.Theme.WeatherApp" />
+    <style name="AppTheme.ToolbarMenu" parent="ThemeOverlay.MaterialComponents.Toolbar.Primary">
+        <item name="android:textColorSecondary">@android:color/white</item>
+    </style>
 </resources>
