multiple place call and unit setting

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -8,6 +8,7 @@
             android:title="Unit System"
             android:summary="%s"
             android:defaultValue="METRIC"
-            />
+            android:entries="@array/unitSystemEntries"
+            android:entryValues="@array/unitSystemValues"/>
     </PreferenceCategory>
 </PreferenceScreen>
