--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,19 +40,9 @@
                 android:layout_centerInParent="true"
                 android:text="@string/app_name"
                 android:textColor="@android:color/white"
-                android:textSize="@dimen/_20sdp" />
+                android:textSize="@dimen/_20sdp"
+                />
 
-<!--            &lt;!&ndash; Right Menu Button &ndash;&gt;-->
-<!--            <ImageButton-->
-<!--                android:id="@+id/rightMenuButton"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_alignParentEnd="true"-->
-<!--                android:layout_centerVertical="true"-->
-<!--                android:background="?attr/selectableItemBackgroundBorderless"-->
-<!--                android:contentDescription="@string/add"-->
-<!--                android:padding="8dp"-->
-<!--                android:src="@drawable/ic_menu" />-->
 
         </RelativeLayout>
 
