--- a/app/src/main/res/layout/activity_search_location.xml
+++ b/app/src/main/res/layout/activity_search_location.xml
@@ -37,5 +37,11 @@
         android:layout_marginTop="@dimen/_15sdp"
         android:id="@+id/search_result_rview"
         />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone" />
 
 </LinearLayout>
